feat: mutation testing implemented