@@ -92,6 +92,12 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-parent</artifactId>
+            <version>1.1.10</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
@@ -150,6 +156,31 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>3.2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.15.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>1.2.1</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                    <targetClasses>
+                        <param>model.beans.*</param>
+                        <param>services.*</param>
+                        <param>utils.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>model.beans.*</param>
+                        <param>services.*</param>
+                        <param>utils.*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
         </plugins>
     </build>
